Creacion inicial de la hoja de estilos boton home

--- a/Index.html
+++ b/Index.html
@@ -3,15 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/estilos.css">
     <title>Blog ADSO grupo 7 SENA</title>
 </head>
 <body>
+    <header class="header">
+        <div class="button-home">
+            <a href="Index.html">
+                <img class="button-home-img" src="https://www.svgrepo.com/show/40892/home-button.svg" alt="">
+            </a>
+        </div>
+    </header>
     <div><h1>Blog</h1></div>
     <div>
     <div><h2>Integrantes:</h2></div>
     <div><h3>John Aparicio</h3></div>
     <div><h3>Duchley Hoyos</h3></div>
-    <div><h3>Fabio</h3></div>
+    <div><h3>Fabio González</h3></div>
     </div>
 </body>
 </html>
