Posicionado inicial del boton home y textos

--- a/Index.html
+++ b/Index.html
@@ -14,12 +14,12 @@
             </a>
         </div>
     </header>
-    <div><h1>Blog</h1></div>
-    <div>
-    <div><h2>Integrantes:</h2></div>
-    <div><h3>John Aparicio</h3></div>
-    <div><h3>Duchley Hoyos</h3></div>
-    <div><h3>Fabio González</h3></div>
+    <div class="titulo"><h1>Blog</h1></div>
+    <div class="container">
+        <div><h2>Integrantes:</h2></div>
+        <div><h3>John Aparicio</h3></div>
+        <div><h3>Duchley Hoyos</h3></div>
+        <div><h3>Fabio González</h3></div>
     </div>
 </body>
 </html>
