--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
             </a>
         </div>
     </header>
-    <div class="titulo"><h1>Blog</h1></div>
+    <div class="titulo"><h1>Blog del grupo 7</h1></div>
+    <div class="integrantes"><h2>Integrantes:</h2></div>
     <div class="container">
-        <div><h2>Integrantes:</h2></div>
-        <div><h3>John Aparicio</h3></div>
-        <div><h3>Duchley Hoyos</h3></div>
-        <div><h3>Fabio González</h3></div>
+        <div class="persona"><h3>John Aparicio</h3></div>
+        <div class="persona"><h3>Duchley Hoyos</h3></div>
+        <div class="persona"><h3>Fabio González</h3></div>
     </div>
 </body>
 </html>
