--- a/index.html
+++ b/index.html
@@ -9,17 +9,20 @@
 <body>
     <header class="header">
         <div class="button-home">
-            <a href="Index.html">
-                <img class="button-home-img" src="https://www.svgrepo.com/show/40892/home-button.svg" alt="">
+            <a href="index.html" class="btn">
+                HOME
             </a>
         </div>
     </header>
     <div class="titulo"><h1>Blog del grupo 7</h1></div>
     <div class="integrantes"><h2>Integrantes:</h2></div>
-    <div class="container">
-        <div class="persona"><h3>John Aparicio</h3></div>
-        <div class="persona"><h3>Duchley Hoyos</h3></div>
-        <div class="persona"><h3>Fabio González</h3></div>
+    <div class="container-principal">
+        <div class="container">
+            <div class="cont-persona"><a href="john-aparicio.html"><h3 class="persona">John Aparicio</h3></a></div>
+            <div class="cont-persona"><h3>Duchley Hoyos</h3></div>
+            <div class="cont-persona"><h3>Fabio González</h3></div>
+        </div>
+        <div class="descripcion-principal"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error placeat eveniet odit et ab blanditiis perferendis! Laudantium totam reiciendis architecto modi! Deserunt ipsam numquam eos quae, magni delectus. Dolore, molestiae?</p></div>
     </div>
 </body>
 </html>
