corrección botones, cambio backgrond color

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="integrantes"><h2>Integrantes:</h2></div>
     <div class="container-principal">
         <div class="container">
-            <div class="cont-persona"><a href="john-aparicio.html"><h3 class="persona">John Aparicio</h3></a></div>
+            <div><a href="john-aparicio.html" class="cont-persona"><h3 class="persona">John Aparicio</h3></a></div>
             <div class="cont-persona"><h3>Duchley Hoyos</h3></div>
             <div class="cont-persona"><h3>Fabio González</h3></div>
         </div>
