Cambios en barra navegacion

--- a/index.html
+++ b/index.html
@@ -4,25 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/estilos.css">
-    <title>Blog ADSO grupo 7 SENA</title>
+    <title>Blog: Tres Compañeros, Tres Historias</title>
 </head>
 <body>
     <header class="header">
-        <div class="button-home">
-            <a href="index.html" class="btn">
-                HOME
-            </a>
-        </div>
+
     </header>
-    <div class="titulo"><h1>Blog del grupo 7</h1></div>
-    <div class="integrantes"><h2>Integrantes:</h2></div>
-    <div class="container-principal">
-        <div class="container">
-            <div><a href="john-aparicio.html" class="cont-persona"><h3 class="persona">John Aparicio</h3></a></div>
-            <div class="cont-persona"><h3>Duchley Hoyos</h3></div>
-            <div class="cont-persona"><h3>Fabio González</h3></div>
-        </div>
-        <div class="descripcion-principal"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error placeat eveniet odit et ab blanditiis perferendis! Laudantium totam reiciendis architecto modi! Deserunt ipsam numquam eos quae, magni delectus. Dolore, molestiae?</p></div>
-    </div>
+    <nav>
+        <ul>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="#">Entradas</a></li>
+            <li><a href="#">Acerca de Nosotros</a></li>
+            <li><a href="#">Contacto</a></li>
+        </ul>
+    </nav>
+    <main>
+        <section>
+            <div class="titulo"><h1>Nuestro Blog: Tres Compañeros, Tres Historias</h1><p>¡Bienvenidos a nuestro espacio digital donde compartimos nuestras vidas, intereses y experiencias!</p></div>
+            <div class="integrantes"><h2>Conoce a los Autores:</h2></div>
+            <div class="container-principal">
+                <div class="container">
+                    <div><a href="john-aparicio.html" class="cont-persona"><h3 class="persona">John Aparicio</h3></a></div>
+                    <div><a href="#" class="cont-persona"><h3 class="persona">Duchley Hoyos</h3></a></div>
+                    <div><a href="#" class="cont-persona"><h3 class="persona">Fabio González</h3></a></div>
+                </div>
+                <div class="descripcion-principal"><p>Somos tres amigos y compañeros de estudio con historias únicas que queremos compartir contigo.</p></div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
