--- a/john-aparicio.html
+++ b/john-aparicio.html
@@ -8,13 +8,21 @@
 </head>
 <body>
     <header class="header">
-        <div class="button-home">
-            <a href="index.html" class="btn">
-                HOME
-            </a>
-        </div>
+    
     </header>
-    <div class="titulo"><h1>John Gerardo Aparicio Rodríguez</h1></div>
-    <div class="container-principal"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt doloribus suscipit, reiciendis magnam quas eaque dolores possimus facilis sequi voluptatibus odit consequatur nihil saepe, deleniti, sint quia nostrum maiores accusantium!</p></div>
+    <nav>
+        <ul>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="#">Entradas</a></li>
+            <li><a href="#">Acerca de Nosotros</a></li>
+            <li><a href="#">Contacto</a></li>
+        </ul>
+    </nav>
+    <main>
+        <section>
+            <div class="titulo"><h1>John Gerardo Aparicio Rodríguez</h1></div>
+            <div class="container-principal"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt doloribus suscipit, reiciendis magnam quas eaque dolores possimus facilis sequi voluptatibus odit consequatur nihil saepe, deleniti, sint quia nostrum maiores accusantium!</p></div>
+        </section>
+    </main>
 </body>
 </html>
